--- a/InCallUI/res/values-fa/strings.xml
+++ b/InCallUI/res/values-fa/strings.xml
@@ -21,10 +21,11 @@
     <string name="onHold" msgid="9035493194749959955">"در انتظار"</string>
     <string name="unknown" msgid="6878797917991465859">"ناشناس"</string>
     <string name="private_num" msgid="6713286113000232309">"شماره خصوصی"</string>
-    <string name="payphone" msgid="1931775086311769314">"تلفن سکه ای"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"تماس کنفرانسی"</string>
-    <string name="call_lost" msgid="317670617901479594">"تماس قطع شد."</string>
-    <string name="ok" msgid="3811371167865772377">"تأیید"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"بلندگو"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"گوشی"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"هدست سیمی"</string>
@@ -38,7 +39,8 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"تماس کنفرانسی <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"شماره پست صوتی"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"شماره گیری"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"در حال امتحان مجدد"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"تماس کنفرانسی"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"تماس ورودی"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"تماس پایان یافت"</string>
@@ -49,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"در حال برقراری تماس ویدیویی"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"تماس ویدیویی"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"درحال درخواست تماس ویدیویی"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"برقرار کردن اتصال تماس ویدیویی انجام نشد"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"شماره تماس با شما\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"شماره تماس اضطراری شما\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"شماره‌گیری"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"تماس بی پاسخ"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"تماس‌های بی پاسخ"</string>
@@ -78,23 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"پیام"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"برای برقراری یک تماس، ابتدا حالت هواپیما را خاموش کنید."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"در شبکه ثبت نشده است."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"شبکهٔ تلفن همراه موجود نیست."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"تماس ارسال نشد، هیچ شماره معتبری وارد نشده است."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"تماس ارسال نشد."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"شبکه تلفن همراه در دسترس نیست."</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"‏شروع ترتیب MMI..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"سرویس پشتیبانی نشده."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"تغییر وضعیت تماس‌ها امکان‌پذیر نیست."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"تفکیک تماس امکان‌پذیر نیست."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"انتقال تماس امکان‌پذیر نیست."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"تماس‌های کنفرانسی امکان‌پذیر نیست."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"رد کردن تماس امکان‌پذیر نیست."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"آزاد کردن تماس(ها) امکان‌پذیر نیست."</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"‏تماس SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"تماس اضطراری"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"در حال روشن کردن رادیو..."</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"خارج از منطقه سرویس، در حال امتحان مجدد..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"تماس ارسال نشد. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> یک شماره اضطراری نیست!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"تماس ارسال نشد، لطفاً یک شماره اضطراری را شماره‌گیری کنید!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"استفاده از صفحه‌کلید برای شماره گیری"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"در انتظار نگه‌داشتن تماس"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"ازسرگیری تماس"</string>
@@ -128,20 +145,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"نوشتن پاسخ خود…"</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"لغو"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"ارسال"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"یک"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"دو"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"سه"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"چهار"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"پنج"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"شش"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"هفت"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"هشت"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"نه"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"ستاره"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"صفر"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"پوند"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"شماره گیری"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"Backspace"</string>
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"بلندگو انتخاب شد"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"گوشی انتخاب شد"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"هدست سیم‌دار انتخاب شد"</string>
@@ -149,7 +152,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"تماس نادیده گرفته شد."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"صدای تماس وصل شد."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"تماس در حالت انتظار نگه داشته شد."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"تماس از حالت انتظار برداشته شد."</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"پاسخ"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"ارسال پیامک"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"عدم پذیرش"</string>
@@ -167,7 +171,8 @@
     <string name="default_notification_description" msgid="78174796906240970">"صدای پیش‌فرض (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"آهنگ زنگ تلفن"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"ارتعاش هنگام زنگ زدن"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"تکمیل خودکار صفحه شماره‌گیری"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"آهنگ‌ زنگ و لرزش"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"مدیریت تماس کنفرانس"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"شماره اضطراری"</string>
