--- a/InCallUI/res/values-ky-rKG/strings.xml
+++ b/InCallUI/res/values-ky-rKG/strings.xml
@@ -25,13 +25,11 @@
     <skip />
     <!-- no translation found for private_num (6713286113000232309) -->
     <skip />
-    <!-- no translation found for payphone (1931775086311769314) -->
+    <!-- no translation found for payphone (4793877574636445118) -->
     <skip />
     <!-- no translation found for confCall (1904840547188336828) -->
     <skip />
-    <!-- no translation found for call_lost (317670617901479594) -->
-    <skip />
-    <!-- no translation found for ok (3811371167865772377) -->
+    <!-- no translation found for call_lost (6183862117003999578) -->
     <skip />
     <!-- no translation found for audio_mode_speaker (27649582100085266) -->
     <skip />
@@ -56,7 +54,7 @@
     <skip />
     <!-- no translation found for card_title_dialing (5769417478498348054) -->
     <skip />
-    <!-- no translation found for card_title_redialing (4831412164303596395) -->
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
     <skip />
     <!-- no translation found for card_title_conf_call (1162980346189744501) -->
     <skip />
@@ -75,9 +73,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"Видео туташтырылууда"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"Видео чалуу"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Видео"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"Видео чалуу туташа албай жатат"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"Чалына турган номер\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Шашылыш чалына турган номериңиз \n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"Терилүүдө"</string>
     <!-- no translation found for notification_missedCallTitle (7554385905572364535) -->
     <skip />
@@ -118,37 +119,38 @@
     <skip />
     <!-- no translation found for incall_error_emergency_only (4678640422710818317) -->
     <skip />
-    <!-- no translation found for incall_error_out_of_service (8587993036435080418) -->
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"Уюктук тармак жеткиликтүү эмес."</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
     <skip />
-    <!-- no translation found for incall_error_no_phone_number_supplied (4197432103471807739) -->
-    <skip />
-    <!-- no translation found for incall_error_call_failed (4313552620858880999) -->
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
     <skip />
     <!-- no translation found for incall_status_dialed_mmi (3672498861336189563) -->
     <skip />
-    <!-- no translation found for incall_error_supp_service_unknown (2991054870745666038) -->
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
     <skip />
-    <!-- no translation found for incall_error_supp_service_switch (3503552565745872241) -->
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
     <skip />
-    <!-- no translation found for incall_error_supp_service_separate (914362338192301746) -->
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
     <skip />
-    <!-- no translation found for incall_error_supp_service_transfer (2509871374644921632) -->
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
     <skip />
-    <!-- no translation found for incall_error_supp_service_conference (2505727299596357312) -->
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
     <skip />
-    <!-- no translation found for incall_error_supp_service_reject (7055164130563826216) -->
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
     <skip />
-    <!-- no translation found for incall_error_supp_service_hangup (7417583238334762737) -->
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
     <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP чалуу"</string>
     <!-- no translation found for emergency_enable_radio_dialog_title (4627849966634578257) -->
     <skip />
     <!-- no translation found for emergency_enable_radio_dialog_message (207613549344420291) -->
     <skip />
-    <!-- no translation found for emergency_enable_radio_dialog_retry (3724423402363063736) -->
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
     <skip />
-    <string name="dial_emergency_error" msgid="7969515493359619960">"Чалуу болгон жок. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> куткаруучулар номуру эмес!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Чалуу болгон жок. Куткаруучулар номуруна чалыңыз!"</string>
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <!-- no translation found for dialerKeyboardHintText (9192914825413747792) -->
     <skip />
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Чалууну кармоо"</string>
@@ -196,34 +198,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"Каалганыңызды жазыңыз..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"Жокко чыгаруу"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Жөнөтүү"</string>
-    <!-- no translation found for description_image_button_one (5502718871331943463) -->
-    <skip />
-    <!-- no translation found for description_image_button_two (4903738528222924522) -->
-    <skip />
-    <!-- no translation found for description_image_button_three (5570985408463782329) -->
-    <skip />
-    <!-- no translation found for description_image_button_four (1697520001239289074) -->
-    <skip />
-    <!-- no translation found for description_image_button_five (3450276493026943454) -->
-    <skip />
-    <!-- no translation found for description_image_button_six (2070376172268675300) -->
-    <skip />
-    <!-- no translation found for description_image_button_seven (1757351311199993371) -->
-    <skip />
-    <!-- no translation found for description_image_button_eight (4734693919020613227) -->
-    <skip />
-    <!-- no translation found for description_image_button_nine (5568534122590597040) -->
-    <skip />
-    <!-- no translation found for description_image_button_star (1976280813017254462) -->
-    <skip />
-    <!-- no translation found for description_image_button_zero (4211255756866893605) -->
-    <skip />
-    <!-- no translation found for description_image_button_pound (1716041284529917866) -->
-    <skip />
-    <!-- no translation found for description_dial_button (7459705245418435351) -->
-    <skip />
-    <!-- no translation found for description_delete_button (4015842181592283903) -->
-    <skip />
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Катуу сүйлөгүч тандалды"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Кулакчын тандалды"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Зымдуу гарнитура тандалды"</string>
@@ -231,7 +205,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Чалуу үнсүз тартипте."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Чалуу үнсүз режимден чыгарылды."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Чалуу күтүүгө коюлду."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Чалуу күтүүдөн алынып салынды."</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"Жооп берүү"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS жөнөтүү"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Четке кагуу"</string>
@@ -249,7 +224,8 @@
     <string name="default_notification_description" msgid="78174796906240970">"Абалкы үнү (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Телефондун рингтону"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Шыңгырап жатканда титиретүү"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Терүүнү авто-толтуруу"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Рингтон жана Титирөө"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Конференц-чалууну башкаруу"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Куткаруучулардын номуру"</string>
