--- a/InCallUI/res/values-my-rMM/strings.xml
+++ b/InCallUI/res/values-my-rMM/strings.xml
@@ -21,10 +21,11 @@
     <string name="onHold" msgid="9035493194749959955">"ခဏ ကိုင်ထားစဉ်"</string>
     <string name="unknown" msgid="6878797917991465859">"အကြောင်းအရာ မသိရှိ"</string>
     <string name="private_num" msgid="6713286113000232309">"လျို့ဝှက် နံပါတ်"</string>
-    <string name="payphone" msgid="1931775086311769314">"အများသုံးတယ်လီဖုန်း"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"ကွန်းဖရင့်ခေါ်ဆိုမှု"</string>
-    <string name="call_lost" msgid="317670617901479594">"ဖုန်းခေါ်မှု ပျောက်ဆုံးသွားပါသည်"</string>
-    <string name="ok" msgid="3811371167865772377">"ကောင်းပြီ"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"စပီကာ"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"လက်ကိုင်တယ်လီဖုန်းနားခွက်"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"ကြိုးတပ် မိုက်ခွက်ပါနားကြပ်"</string>
@@ -38,7 +39,8 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"ကွန်းဖရင့် ခေါ်ဆိုမှု <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"အသံစာပို့စနစ်နံပါတ်"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"ဖုန်းခေါ်နေစဉ်"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"ပြန်ကြိုးစားနေစဉ်"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"ကွန်းဖရင့်ခေါ်ဆိုမှု"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"အဝင်ခေါ်ဆိုမှု"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"ဖုန်းခေါ်ဆိုမှု ပြီးဆုံးပါပြီ"</string>
@@ -49,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"ဗီဒီယို ချိတ်ဆက်နေ"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"ဗီဒီယို ခေါ်ဆိုမှု"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"ဗွီဒီယိုကို တောင်းဆိုနေ"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"ဗွီဒီယို ခေါ်ဆိုမှု ချိတ်ဆက် မရနိုင်"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"သင် ပြန်ခေါ်ရမည့် နံပါတ်\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"သင်၏ အရေးပေါ် ပြန်ခေါ်ရန် နံပါတ်\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"ဖုန်းခေါ်နေစဉ်"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"လွဲသွားသော ဖုန်းခေါ်မှု"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"လွဲသွားသော ဖုန်းခေါ်မှုများ"</string>
@@ -78,23 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"စာတို"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"ဖုန်းခေါ်ဆိုမှုပြုရန်, လေယာဥ်ပျံပေါ်အသုံးပြုသောစနစ်ကို ပိတ်ပါ"</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"ကွန်ယက်ပေါ်မှာ မှတ်ပုံတင်မှု မပြုလုပ်ထားပါ"</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"မိုဘိုင်းကွန်ယက်များ မရှိပါ"</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"ဖုန်းခေါ်မှု မထွက်ပါ၊ မှန်ကန်သော ဖုန်းနံပါတ် မဟုတ်ပါ"</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"ဖုန်းခေါ်မှု မထွက်ပါ"</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"ဆယ်လူလာ ကွန်ရက် မရှိပါ။"</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"MMI အမှတ်စဉ်ကို စတင်နေပါသည်…"</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"ထောက်ပံ့ထားသေား ဝန်ဆောင်မှု မဟုတ်ပါ"</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"ဖုန်းခေါ်မှုများကြား အလှည့်အပြောင်းလုပ်လို့ မရပါ"</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"ဖုန်းခေါ်မှုကို ခွဲပစ်လို့ မရပါ"</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"ဖုန်းခေါ်မှုကို လွှဲပြောင်းပေးလို့ မရပါ"</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"ကွန်းဖရင့် ပြုလုပ်၍ မရပါ"</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"ဖုန်းခေါ်မှုကို ငြင်းလို့မရပါ"</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"ဖုန်းခေါ်ဆိုမှု(များ) လွှတ်လို့ မရပါ"</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP ခေါ်ဆိုမှုများ"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"အရေးပေါ်ခေါ်ဆိုမှု"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"ရေဒီယို ဖွင့်နေစဉ်…"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"ဆက်သွယ်မှုဧရိယာပြင်ပ၊ ပြန်လည်ကြိုးစားနေစဉ်..."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"ဖုန်းခေါ်ဆိုမှု မဖြစ်ပါ, <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> မှာ အရေးပေါ်ဖုန်းနံပါတ် မဟုတ်ပါ!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"ဖုန်းခေါ်မှု မအောင်မြင်ပါ။ အရေးပေါ်နံပါတ် တစ်ခုရိုက်ထည့်ပါ!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"ကီးဘုတ်သုံး၍ခလုတ်နှိပ်ပါ"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"ခေါ်ဆိုမှု ခဏရပ်ပါ"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"ခေါ်ဆိုမှု ဆက်လုပ်ရန်"</string>
@@ -128,20 +145,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"သင့်ကိုယ်ပိုင် စာသား ရေးပါ..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"ထားတော့"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"ပို့ခြင်း"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"တစ်"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"နှစ်"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"သုံး"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"လေး"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"ငါး"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"ခြောက်"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"ခုနှစ်"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"ရှစ်"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"ကိုး"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"ကြယ်ခုလုတ်"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"သုံည"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"စတာလင်ပေါင်"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"ဖုန်းခေါ်ခြင်း"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"နောက်ပြန်ဖျက်ခလုတ်"</string>
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"စမီကာဖုန်းကို ရွေးထား"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"နားကြပ်ကို ရွေးထား"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"ကြိုးတပ် ဟက်ဆက်ကို ရွေးထား"</string>
@@ -149,7 +152,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"နားထောင်ရုံသာ (စကားပြောပိတ်ထားသည်)"</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"ခေါ်ဆိုမှု အသံတိတ်မထားပါ"</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"ခေါ်ဆိုမှုကို ရပ်ဆိုင်းထားသည်။"</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"ခေါ်ဆိုမှုကို ရပ်ဆိုင်းမှု ထဲမှ ဖယ်ရှားလိုက်ပြီ။"</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"အဖြေ"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"စာတို ပေးပို့သည်"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"လက်မခံပါ"</string>
@@ -167,7 +171,8 @@
     <string name="default_notification_description" msgid="78174796906240970">"ပုံသေ အသံ (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"ဖုန်းမြည်သံ"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"ဖုန်းမြည်စဉ်တုန်ခါရန်"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"အလိုအလျောက် နံပါတ်ဖြည့်ပေးသော ဖုန်းနံပါတ်ပြား"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"ဖုန်းမြည်သံ &amp; တုန်ခါသံ"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"ကွန်းဖရင့် ခေါ်ဆိုမှုကို ထိန်းချုပ်သည်"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"အရေးပေါ်နံပါတ်"</string>
