--- a/InCallUI/res/values-sw/strings.xml
+++ b/InCallUI/res/values-sw/strings.xml
@@ -21,10 +21,11 @@
     <string name="onHold" msgid="9035493194749959955">"Inangoja"</string>
     <string name="unknown" msgid="6878797917991465859">"Haijulikani"</string>
     <string name="private_num" msgid="6713286113000232309">" Number isiyojulikana"</string>
-    <string name="payphone" msgid="1931775086311769314">"Simu ya kulipia"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"Simu ya kongamano"</string>
-    <string name="call_lost" msgid="317670617901479594">"Simu imepotea."</string>
-    <string name="ok" msgid="3811371167865772377">"Sawa"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"Spika"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Kipaza sauti cha kichwani"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Viskizi vya maskio pasiwaya"</string>
@@ -38,7 +39,8 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"Simu ya kongamano <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"Nambari ya ujumbe wa sauti"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"Inapiga"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"Inajaribu tena"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"Simu ya kongamano"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"Simu inayoingia"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"Simu imekamilika"</string>
@@ -49,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"Inaunganisha video"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"Hangout ya Video"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Inaomba video"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"Haiwezi kuunganisha Hangout ya Video"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"Nambari yako ya kupiga simu\n<xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Nambari yako ya kupiga simu ya dharura \n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"Inapiga"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Simu isiyojibiwa"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Simu zisizojibiwa"</string>
@@ -78,23 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Ujumbe"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Kupiga simu, kwanza zima hali ya ndege."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Haijasajiliwa kwa mitandao"</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"Mtandao wa simu haupatikani."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Simu haijatumwa, hakuna nambari halali iliyoingizwa."</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Simu haijapigwa."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"Mitandao ya simu za mkononi haipatikani"</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"Inaanzisha msururu wa MMI…"</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Kifaa ambacho hakijahiliwa."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Imeshindwa kubadilisha simu"</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"Imeshindwa kutenganisha simu."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"Imeshindwa kutuma simu"</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Imeshindwa kupigia watu wengi."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Imeshindwa kukataa simu."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Imeshindwa kuachilia simu."</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"Simu ya SIP"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Simu ya dharura"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Inawasha redio..."</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Uko mahali pasipokuwa na huduma, inajaribu tena…."</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"Simu haijatumwa. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> sio nambari ya dharura!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Simu haijatumwa. Piga nambari ya dharura!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Tumia kibodi kubonyeza"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Shikilia simu"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Endelea na simu"</string>
@@ -128,20 +145,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"Andika yako binafsi..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"Ghairi"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Tuma"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"moja"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"mbili"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"tatu"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"nne"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"tano"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"sita"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"saba"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"nane"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"tisa"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"nyota"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"sufuri"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"pauni"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"piga simu"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"nafasi ya nyuma"</string>
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Spika ya simu imechaguliwa"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Spika ya sikioni imechaguliwa"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Vifaa vya sauti vinavyotumia waya vimechaguliwa"</string>
@@ -149,7 +152,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Simu imezimwa."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Sauti ya simu imerejeshwa."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Simu imewekwa isubiri."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Simu iliyokuwa inasubiri imeondolewa."</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"Jibu"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"Tuma SMS"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Kataa"</string>
@@ -167,7 +171,8 @@
     <string name="default_notification_description" msgid="78174796906240970">"Sauti chaguo-msingi (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Mlio wa simu"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Tetema wakati wa kulia"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Jaza nambari kiotomatiki"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Mlio wa simu na Mtetemo"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Dhibiti simu ya kongamano"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Nambari ya dharura"</string>
