--- a/InCallUI/res/values-uz-rUZ/strings.xml
+++ b/InCallUI/res/values-uz-rUZ/strings.xml
@@ -21,10 +21,11 @@
     <string name="onHold" msgid="9035493194749959955">"Kutmoqda"</string>
     <string name="unknown" msgid="6878797917991465859">"Noma’lum"</string>
     <string name="private_num" msgid="6713286113000232309">"Shaxsiy raqam"</string>
-    <string name="payphone" msgid="1931775086311769314">"Pullik telefon"</string>
+    <!-- no translation found for payphone (4793877574636445118) -->
+    <skip />
     <string name="confCall" msgid="1904840547188336828">"Konferensiya qo‘ng‘irog‘i"</string>
-    <string name="call_lost" msgid="317670617901479594">"Qo‘ng‘iroq tugatildi."</string>
-    <string name="ok" msgid="3811371167865772377">"OK"</string>
+    <!-- no translation found for call_lost (6183862117003999578) -->
+    <skip />
     <string name="audio_mode_speaker" msgid="27649582100085266">"Karnay"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"Telefon quloq eshitgichlari"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"Simli garnitura"</string>
@@ -38,7 +39,8 @@
     <string name="caller_manage_header" msgid="3231519674734638786">"Konferensiya qo‘ng‘irog‘i <xliff:g id="CONF_CALL_TIME">%s</xliff:g>"</string>
     <string name="voicemail_settings_number_label" msgid="8524164258691887790">"Ovozli xabar raqami"</string>
     <string name="card_title_dialing" msgid="5769417478498348054">"Raqam terilmoqda"</string>
-    <string name="card_title_redialing" msgid="4831412164303596395">"Qaytadan urinilmoqda"</string>
+    <!-- no translation found for card_title_redialing (8253487008234167266) -->
+    <skip />
     <string name="card_title_conf_call" msgid="1162980346189744501">"Konferensiya qo‘ng‘irog‘i"</string>
     <string name="card_title_incoming_call" msgid="7364539451234646909">"Kiruvchi qo‘ng‘iroq"</string>
     <string name="card_title_call_ended" msgid="5544730338889702298">"Qo‘ng‘iroq tugadi"</string>
@@ -49,9 +51,12 @@
     <string name="card_title_video_call_connecting" msgid="297586766381973954">"Videoga ulanmoqda"</string>
     <string name="card_title_video_call" msgid="5898636679563320218">"Video qo‘ng‘iroq"</string>
     <string name="card_title_video_call_requesting" msgid="4587504939739340937">"Video so\'ralmoqda"</string>
-    <string name="card_title_video_call_error" msgid="5520555528871673801">"Video qo\'ng\'iroqqa ulanish imkoni yo\'q"</string>
-    <string name="card_title_callback_number" msgid="4604563437776874016">"Sizning teskari qo‘ng‘iroq raqamingiz\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
-    <string name="card_title_callback_number_emergency" msgid="85588345502265075">"Favqulodda holatlar uchun teskari qo‘ng‘iroq raqamingiz\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
+    <!-- no translation found for card_title_video_call_error (9000555878389539225) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number (7307938207564217293) -->
+    <skip />
+    <!-- no translation found for card_title_callback_number_emergency (8634765419223426754) -->
+    <skip />
     <string name="notification_dialing" msgid="2107666444937350731">"Terilmoqda"</string>
     <string name="notification_missedCallTitle" msgid="7554385905572364535">"Javob berilmagan qo‘ng‘iroq"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"Javobsiz qo‘ng‘iroqlar"</string>
@@ -78,23 +83,35 @@
     <string name="notification_missedCall_message" msgid="3049928912736917988">"Xabar"</string>
     <string name="incall_error_power_off" msgid="6550191216405193368">"Qo‘ng‘iroq qilish uchun, avval \"Parvoz rejimi\" o‘chirilishi kerak."</string>
     <string name="incall_error_emergency_only" msgid="4678640422710818317">"Tarmoqda ro‘yxatdan o‘tmagan."</string>
-    <string name="incall_error_out_of_service" msgid="8587993036435080418">"Uyali tarmoq mavjud emas."</string>
-    <string name="incall_error_no_phone_number_supplied" msgid="4197432103471807739">"Qo‘ng‘iroq jo‘natilmadi, chunki xato raqam kiritilgan"</string>
-    <string name="incall_error_call_failed" msgid="4313552620858880999">"Qo‘ng‘iroq jo‘natilmadi."</string>
+    <string name="incall_error_out_of_service" msgid="4100065333878929223">"Mobil tarmoq mavjud emas."</string>
+    <!-- no translation found for incall_error_no_phone_number_supplied (1150414018684246528) -->
+    <skip />
+    <!-- no translation found for incall_error_call_failed (6302746943230078197) -->
+    <skip />
     <string name="incall_status_dialed_mmi" msgid="3672498861336189563">"MMI tartibi ishga tushmoqda..."</string>
-    <string name="incall_error_supp_service_unknown" msgid="2991054870745666038">"Mos kelmaydigan xizmat."</string>
-    <string name="incall_error_supp_service_switch" msgid="3503552565745872241">"Qo‘ng‘iroqlarni almashtirib bo‘lmadi."</string>
-    <string name="incall_error_supp_service_separate" msgid="914362338192301746">"Qo‘ng‘iroqni ajratib bo‘lmadi."</string>
-    <string name="incall_error_supp_service_transfer" msgid="2509871374644921632">"Qo‘ng‘iroq uzatilmadi."</string>
-    <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"Konferensiya qo‘ng‘iroqlarini amalga oshirib bo‘lmaydi."</string>
-    <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"Qo‘ng‘iroqni rad qilib bo‘lmadi."</string>
-    <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"Qo‘ng‘iroq(lar)ni chiqarib bo‘lmadi."</string>
+    <!-- no translation found for incall_error_supp_service_unknown (323435289607131929) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_switch (5237002176899962862) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_separate (7224393405134545246) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_transfer (7235952238189391438) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_conference (7010354362202271726) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_reject (8998568661508655638) -->
+    <skip />
+    <!-- no translation found for incall_error_supp_service_hangup (7434513517153834426) -->
+    <skip />
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP qo‘ng‘iroq"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"Favqulodda qo‘ng‘iroq"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"Radio yoqilmoqda…"</string>
-    <string name="emergency_enable_radio_dialog_retry" msgid="3724423402363063736">"Xizmat ko‘rsatish doirasidan tashqarida, qayta urinilmoqda…"</string>
-    <string name="dial_emergency_error" msgid="7969515493359619960">"Qo‘ng‘iroq jo‘natilmadi. <xliff:g id="NON_EMERGENCY_NUMBER">%s</xliff:g> favqulodda raqam emas!"</string>
-    <string name="dial_emergency_empty_error" msgid="5556166819619323893">"Qo‘ng‘iroq jo‘natilmadi. Favqulodda raqamni tering!"</string>
+    <!-- no translation found for emergency_enable_radio_dialog_retry (5960061579996526883) -->
+    <skip />
+    <!-- no translation found for dial_emergency_error (1509085166367420355) -->
+    <skip />
+    <!-- no translation found for dial_emergency_empty_error (9130194953830414638) -->
+    <skip />
     <string name="dialerKeyboardHintText" msgid="9192914825413747792">"Terish uchun tugmatagdan foydalaning"</string>
     <string name="overflowHoldMenuItemText" msgid="7382457697092158039">"Qo‘ng‘iroqni ushlab turish"</string>
     <string name="overflowResumeMenuItemText" msgid="8826360006222366843">"Qo‘ng‘iroqni davom ettirish"</string>
@@ -128,20 +145,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"O‘z javobingizni yozing..."</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"Bekor qilish"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"Jo‘natish"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"bir"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"ikki"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"uch"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"to‘rt"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"besh"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"olti"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"yetti"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"sakkiz"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"to‘qqiz"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"yulduz"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"nol"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"funt"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"terish"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"orqaga"</string>
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"Karnay tanlandi"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"Quloqlik tanlandi"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"Simsiz moslama tanlandi"</string>
@@ -149,7 +152,8 @@
     <string name="accessibility_call_muted" msgid="2776111226185342220">"Qo‘ng‘iroq ovozi o‘chirildi."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"Qo‘ng‘iroq ovozli qilindi."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"Qo‘ng‘iroq kutish rejimiga qo‘yildi."</string>
-    <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"Qo‘ng‘iroq kutish rejimidan chiqarildi."</string>
+    <!-- no translation found for accessibility_call_removed_from_hold (5107480079544990575) -->
+    <skip />
     <string name="description_target_answer" msgid="7205604197797472471">"Javob berish"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"SMS yuborish"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"Rad qilish"</string>
@@ -167,7 +171,8 @@
     <string name="default_notification_description" msgid="78174796906240970">"Standart ovoz (<xliff:g id="DEFAULT_SOUND_TITLE">%1$s</xliff:g>)"</string>
     <string name="ringtone_title" msgid="6374978286202084684">"Telefon qo‘ng‘iroq ohangi"</string>
     <string name="vibrate_on_ring_title" msgid="9197564612065258960">"Jiringlash vaqtida tebranish"</string>
-    <string name="dial_pad_autocomplete" msgid="494525952035761075">"Tugmatagda terganda avtoto‘ldirish"</string>
+    <!-- no translation found for dial_pad_autocomplete (7683489952557536398) -->
+    <skip />
     <string name="preference_category_ringtone" msgid="5197960752529332721">"Qo‘ng‘iroq ohangi &amp; tebranish"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"Konferensiya qo‘ng‘irog‘ini boshqarish"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"Favqulodda qo‘ng‘iroq raqamlari"</string>
